ledger/sparse-struct/tests/ui/wrong-derive.stderr
error: expected parentheses: #[struct_derive(...)]
  --> tests/ui/wrong-derive.rs:14:17
   |
14 | #[struct_derive = ""]
   |                 ^

error: expected unsuffixed literal, found `[`
  --> tests/ui/wrong-derive.rs:24:17
   |
24 | #[struct_derive([u8; 3])]
   |                 ^

error: `struct_derive` should be specified on the enum, not on its variants.
  --> tests/ui/wrong-derive.rs:45:5
   |
45 |     #[struct_derive(Clone)]
   |     ^

error: cannot find derive macro `NotInScope` in this scope
  --> tests/ui/wrong-derive.rs:34:17
   |
34 | #[struct_derive(NotInScope)]
   |                 ^^^^^^^^^^

error[E0204]: the trait `std::marker::Copy` cannot be implemented for this type
 --> tests/ui/wrong-derive.rs:5:17
  |
4 | #[derive(Debug, Clone, Copy, PartialEq, Eq, PartialOrd, Ord, Hash, SparseStruct)]
  |                                                                    ------------ this field does not implement `std::marker::Copy`
5 | #[struct_derive(Copy)]
  |                 ^^^^
